--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -147,6 +147,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Definition\HasOne.cs" />
     <Compile Include="Definition\HasOneAttribute.cs" />
     <Compile Include="Definition\IBelongsTo.cs" />
+    <Compile Include="Definition\IDataReaderInitalize.cs" />
     <Compile Include="Definition\IDbObject.cs" />
     <Compile Include="Definition\ILazyLoading.cs" />
     <Compile Include="Common\EmptyCondition.cs" />
