--- a/src/Lephone.MockSql/Lephone.MockSql.csproj
+++ b/src/Lephone.MockSql/Lephone.MockSql.csproj
@@ -2,7 +2,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{C79309C3-3E59-490C-89EA-6A4AA05B0DD5}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -68,6 +68,7 @@
     <Compile Include="Recorder\ConsoleRecorder.cs" />
     <Compile Include="Recorder\FileRecorder.cs" />
     <Compile Include="Recorder\IRecorder.cs" />
+    <Compile Include="Recorder\RowInfo.cs" />
     <Compile Include="Recorder\StaticRecorder.cs" />
   </ItemGroup>
   <ItemGroup>
