--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -49,6 +49,7 @@
       <HintPath>..\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -143,6 +144,7 @@
     <Compile Include="util\XmlSerializerTest.cs" />
     <Compile Include="Web\CommonTest.cs" />
     <Compile Include="Web\HtmlBuilderTest.cs" />
+    <Compile Include="Web\MembershipTest.cs" />
     <Compile Include="Web\RailsTest.cs" />
     <Compile Include="Web\UrlBuilderTest.cs" />
     <Compile Include="Web\XmlBuilderTest.cs" />
