--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -133,6 +133,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\StupidDataReader.cs" />
     <Compile Include="Common\VBHelper.cs" />
     <Compile Include="DbContext.cs" />
+    <Compile Include="Definition\CreateTableListAttribute.cs" />
     <Compile Include="Definition\CrossTableNameAttribute.cs" />
     <Compile Include="Definition\DbObjectModelAsTree.cs" />
     <Compile Include="Definition\BelongsToAttribute.cs" />
