--- a/src/Lephone.CodeGen/Lephone.CodeGen.csproj
+++ b/src/Lephone.CodeGen/Lephone.CodeGen.csproj
@@ -49,6 +49,7 @@
     <Compile Include="ArgsErrorException.cs" />
     <Compile Include="AspNetGenerator.cs" />
     <Compile Include="Helper.cs" />
+    <Compile Include="ModelsGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RailsActionGenerator.cs" />
@@ -75,6 +76,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Readme.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
