work item: 25383 version 3.6.
git-svn-id: https://dbentry.svn.codeplex.com/svn@61550 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Data\PagedSelectorTest.cs" />
     <Compile Include="Data\PartialUpdateTest.cs" />
     <Compile Include="Data\PropertyClassTest.cs" />
+    <Compile Include="Data\SerializeTest.cs" />
     <Compile Include="Data\SmartUpdateTest.cs" />
     <Compile Include="Data\SoftDeleteTest.cs" />
     <Compile Include="Data\TableSchemaTest.cs" />
