--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -115,8 +115,10 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\ColumnFunction.cs" />
     <Compile Include="Common\DbStructInterface.cs" />
     <Compile Include="Common\DeleteToQueryComposer.cs" />
+    <Compile Include="Common\DynamicObjectBuilder.cs" />
     <Compile Include="Common\LephoneSetting.cs" />
     <Compile Include="Common\TimeSpanLessDataReader.cs" />
+    <Compile Include="DataReaderEmitHelper.cs" />
     <Compile Include="Definition\CacheableAttribute.cs" />
     <Compile Include="Common\DynamicObjectReference.cs" />
     <Compile Include="Common\EmitObjectHandlerBase.cs" />
