--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -100,6 +100,7 @@
     <Compile Include="Data\SmartUpdateTest.cs" />
     <Compile Include="Data\SoftDeleteTest.cs" />
     <Compile Include="Data\TableSchemaTest.cs" />
+    <Compile Include="Data\ThreadIssueTest.cs" />
     <Compile Include="Data\UnsignedNumberTest.cs" />
     <Compile Include="Data\UserIssueTest.cs" />
     <Compile Include="Data\ValidateHandlerTest.cs" />
