--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -11,15 +11,16 @@
 					<section name="authenticationService" type="System.Web.Configuration.ScriptingAuthenticationServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/>
 					<section name="roleService" type="System.Web.Configuration.ScriptingRoleServiceSection, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" requirePermission="false" allowDefinition="MachineToApplication"/></sectionGroup></sectionGroup></sectionGroup></configSections>
 	<Lephone.Settings>
-		<add key="SqlLogRecorder" value="Lephone.Util.Logging.DebugLogRecorder, Lephone.Util"/>
-		<add key="ObjectHandlerType" value="Emit"/>
-		<add key="DefaultContext" value="Development"/>
-		<add key="UsingAspxPostfix" value="true"/>
-		<add key="Test.AutoCreateTable" value="true"/>
-		<add key="Test.DataBase" value="@Access : @~App_Data\test.mdb"/>
-		<add key="Development.AutoCreateTable" value="true"/>
-		<add key="Development.DataBase" value="@SQLite : @~App_Data\test.db"/>
-		<add key="Development.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.60.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
+		<add key="SqlLogRecorder" value="Lephone.Util.Logging.DebugLogRecorder, Lephone.Util" />
+		<add key="ObjectHandlerType" value="Emit" />
+		<add key="DefaultContext" value="Development" />
+		<add key="UsingAspxPostfix" value="true" />
+    <add key="ScaffoldingMasterPage" value="~/MasterPage.master" />
+		<add key="Test.AutoCreateTable" value="true" />
+		<add key="Test.DataBase" value="@Access : @~App_Data\test.mdb" />
+		<add key="Development.AutoCreateTable" value="true" />
+		<add key="Development.DataBase" value="@SQLite : @~App_Data\test.db" />
+		<add key="Development.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.60.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139" />
 	</Lephone.Settings>
 	<appSettings/>
 	<connectionStrings/>
