--- a/src/Lephone.Web/Lephone.Web.csproj
+++ b/src/Lephone.Web/Lephone.Web.csproj
@@ -92,6 +92,7 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Rails\SessionBox.cs" />
+    <Compile Include="Rails\StaticListAttribute.cs" />
     <Compile Include="Rails\UrlToInfo.cs" />
     <Compile Include="SmartMasterPageBase.cs">
       <SubType>ASPXCodeBehind</SubType>
