--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -5,7 +5,10 @@
   </configSections>
 
   <Lephone.Settings>
-    <add key="DataBase" value="@Firebird : User=SYSDBA;Password=masterkey;Database=D:\test.fdb;DataSource=localhost;Port=3050;Dialect=3;Charset=NONE;Role=;Connection lifetime=15;Pooling=true;MinPoolSize=0;MaxPoolSize=50;Packet Size=8192;ServerType=0" />
-    <add key="DbProviderFactory" value="@SmartDbFactory : FirebirdSql.Data.FirebirdClient, Version=2.1.0.0, Culture=neutral, PublicKeyToken=3750abcc3150b00c" />
+    <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
+    <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util" />
+    <add key="AutoCreateTable" value="true"/>
+    <add key="DataBase" value="@SQLite : @~studio.db"/>
+    <add key="DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.60.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
   </Lephone.Settings>
 </configuration>
