--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -7,8 +7,14 @@
   <Lephone.Settings>
     <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
     <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util" />
+    <add key="DefaultContext" value="MySql" />
+    <!-- Sqlite config -->
     <add key="AutoCreateTable" value="true"/>
     <add key="DataBase" value="@SQLite : @~studio.db"/>
     <add key="DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.60.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
+    <!-- MySql config -->
+    <add key="MySql.AutoCreateTable" value="true"/>
+    <add key="MySql.DataBase" value="@MySql : server=localhost;user id=root; password=123; database=mytest; pooling=false" />
+    <add key="MySql.DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
   </Lephone.Settings>
 </configuration>
