--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -7,7 +7,7 @@
   <Lephone.Settings>
     <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
     <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util" />
-    <add key="DefaultContext" value="MySql" />
+    <add key="DefaultContext" value="SqlServer" />
     <!-- Sqlite config -->
     <add key="AutoCreateTable" value="true"/>
     <add key="DataBase" value="@SQLite : @~studio.db"/>
@@ -16,5 +16,8 @@
     <add key="MySql.AutoCreateTable" value="true"/>
     <add key="MySql.DataBase" value="@MySql : server=localhost;user id=root; password=123; database=mytest; pooling=false" />
     <add key="MySql.DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    <!-- Sql Server 2000 config -->
+    <add key="SqlServer.AutoCreateTable" value="true"/>
+    <add key="SqlServer.DataBase" value="@SqlServer2000 : data source=LLF-PC\SQLEXPRESS;initial catalog=llf_sql_test;user id=sa;password=123" />
   </Lephone.Settings>
 </configuration>
