--- a/src/Lephone.CodeGen/Lephone.CodeGen.csproj
+++ b/src/Lephone.CodeGen/Lephone.CodeGen.csproj
@@ -54,8 +54,8 @@
     <Compile Include="ModelsGenerator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RailsActionGenerator.cs" />
-    <Compile Include="RailsViewGenerator.cs" />
+    <Compile Include="MvcActionGenerator.cs" />
+    <Compile Include="MvcViewGenerator.cs" />
     <Compile Include="TypeComparer.cs" />
   </ItemGroup>
   <ItemGroup>
