--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0"?>
+<?xml version="1.0"?>
 <configuration>
 	<configSections>
 		<section name="Lephone.Settings" type="Lephone.Util.Setting.NameValueSectionHandler, Lephone.Util"/>
@@ -36,14 +36,14 @@
 			<add path="*.rar" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
 			<add path="*.htm" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
 			<add path="*.html" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
-			<add path="*" verb="*" type="Lephone.Web.RailsDispatcher, Lephone.Web" validate="true"/>
+			<add path="*" verb="*" type="Lephone.Web.MvcDispatcher, Lephone.Web, Version=3.6.*, Culture=neutral" validate="true"/>
 			<remove verb="*" path="*.asmx"/>
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="GET,HEAD" path="ScriptResource.axd" validate="false" type="System.Web.Handlers.ScriptResourceHandler, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/></httpHandlers>
-		<pages pageBaseType="Lephone.Web.Rails.PageBase, Lephone.Web">
+		<pages pageBaseType="Lephone.Web.Mvc.PageBase, Lephone.Web">
 			<namespaces>
-				<add namespace="Lephone.Web.Rails"/>
+				<add namespace="Lephone.Web.Mvc"/>
 				<add namespace="DebugLib.Models"/>
 			</namespaces>
 			<controls>
