--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -143,6 +143,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\VBHelper.cs" />
     <Compile Include="DbContext.cs" />
     <Compile Include="Definition\CrossTableNameAttribute.cs" />
+    <Compile Include="Definition\DbContextAttribute.cs" />
     <Compile Include="Definition\DbObjectModelAsTree.cs" />
     <Compile Include="Definition\BelongsToAttribute.cs" />
     <Compile Include="Definition\DbObjectBase.cs" />
