--- a/src/Lephone.UnitTest/Lephone.UnitTest.csproj
+++ b/src/Lephone.UnitTest/Lephone.UnitTest.csproj
@@ -68,6 +68,7 @@
     <Compile Include="Data\CacheTest.cs" />
     <Compile Include="Data\CommonUsageTest.cs" />
     <Compile Include="Data\ComplexDynamicObjectTest.cs" />
+    <Compile Include="Data\ComplexRelationTest.cs" />
     <Compile Include="Data\CreateTable\FirebirdTest.cs" />
     <Compile Include="Data\CreateTable\JoinClassTest.cs" />
     <Compile Include="Data\CreateTable\SQLiteTest.cs" />
