--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -118,6 +118,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\ColumnFunction.cs" />
     <Compile Include="Common\DbStructInterface.cs" />
     <Compile Include="Common\DeleteToQueryComposer.cs" />
+    <Compile Include="Common\DynamicLinqObjectHandler.cs" />
     <Compile Include="Common\DynamicObjectBuilder.cs" />
     <Compile Include="Common\ForTypeAttribute.cs" />
     <Compile Include="Common\GroupBySumObject.cs" />
