work item: 26800 Release 3.9
git-svn-id: https://dbentry.svn.codeplex.com/svn@65527 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -184,6 +184,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Dialect\SqlCE.cs" />
     <Compile Include="Dialect\SqlServer2008.cs" />
     <Compile Include="Driver\DbFactory.cs" />
+    <Compile Include="Driver\MySqlDriver.cs" />
     <Compile Include="Driver\SmartDbFactory.cs" />
     <Compile Include="Linq\ExpressionParser.cs" />
     <Compile Include="Linq\LinqException.cs" />
