--- a/src/WebDebug/Web.Config
+++ b/src/WebDebug/Web.Config
@@ -36,7 +36,7 @@
 			<add path="*.rar" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
 			<add path="*.htm" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
 			<add path="*.html" verb="GET,HEAD" type="System.Web.StaticFileHandler" validate="true"/>
-			<add path="*" verb="*" type="Lephone.Web.MvcDispatcher, Lephone.Web, Version=3.6.*, Culture=neutral" validate="true"/>
+			<add path="*" verb="*" type="Lephone.Web.MvcDispatcher, Lephone.Web" />
 			<remove verb="*" path="*.asmx"/>
 			<add verb="*" path="*.asmx" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
 			<add verb="*" path="*_AppService.axd" validate="false" type="System.Web.Script.Services.ScriptHandlerFactory, System.Web.Extensions, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>
