--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -7,11 +7,12 @@
   <Lephone.Settings>
     <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
     <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util" />
-    <add key="DefaultContext" value="SqlServer" />
+    <add key="ObjectHandlerType" value="Reflection" />
+    <add key="DefaultContext" value="Sqlite" />
     <!-- Sqlite config -->
-    <add key="AutoCreateTable" value="true"/>
-    <add key="DataBase" value="@SQLite : @~studio.db"/>
-    <add key="DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.60.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
+    <add key="Sqlite.AutoCreateTable" value="true"/>
+    <add key="Sqlite.DataBase" value="@SQLite : @~studio.db"/>
+    <add key="Sqlite.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.65.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
     <!-- MySql config -->
     <add key="MySql.AutoCreateTable" value="true"/>
     <add key="MySql.DataBase" value="@MySql : server=localhost;user id=root; password=123; database=mytest; pooling=false" />
@@ -19,5 +20,9 @@
     <!-- Sql Server 2000 config -->
     <add key="SqlServer.AutoCreateTable" value="true"/>
     <add key="SqlServer.DataBase" value="@SqlServer2000 : data source=LLF-PC\SQLEXPRESS;initial catalog=llf_sql_test;user id=sa;password=123" />
+    <!-- Oracle 2000 config -->
+    <add key="Oracle.AutoCreateTable" value="true"/>
+    <add key="Oracle.DataBase" value="@Oracle : Data Source=localhost; User Id=llf; Password=123" />
+    <add key="Oracle.DbProviderFactory" value="@SmartDbFactory : System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   </Lephone.Settings>
 </configuration>
