--- a/src/Debug/App.config
+++ b/src/Debug/App.config
@@ -1,28 +1,28 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="Lephone.Settings" type="Lephone.Util.Setting.NameValueSectionHandler, Lephone.Util" />
+    <section name="Lephone.Settings" type="Lephone.Util.Setting.NameValueSectionHandler, Lephone.Util"/>
   </configSections>
 
   <Lephone.Settings>
-    <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util" />
-    <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util" />
-    <add key="ObjectHandlerType" value="Reflection" />
-    <add key="DefaultContext" value="Sqlite" />
+    <add key="SqlLogRecorder" value="Lephone.Util.Logging.ConsoleMessageRecorder, Lephone.Util"/>
+    <add key="NameMapper" value="Lephone.Util.Text.InflectionNameMapper, Lephone.Util"/>
+    <add key="ObjectHandlerType" value="Reflection"/>
+    <add key="DefaultContext" value="Sqlite"/>
     <!-- Sqlite config -->
     <add key="Sqlite.AutoCreateTable" value="true"/>
     <add key="Sqlite.DataBase" value="@SQLite : @~studio.db"/>
-    <add key="Sqlite.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.65.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
+    <add key="Sqlite.DbProviderFactory" value="System.Data.SQLite.SQLiteFactory, System.Data.SQLite, Version=1.0.66.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139"/>
     <!-- MySql config -->
     <add key="MySql.AutoCreateTable" value="true"/>
-    <add key="MySql.DataBase" value="@MySql : server=localhost;user id=root; password=123; database=mytest; pooling=false" />
-    <add key="MySql.DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
+    <add key="MySql.DataBase" value="@MySql : server=localhost;user id=root; password=123; database=mytest; pooling=false"/>
+    <add key="MySql.DbProviderFactory" value="@SmartDbFactory : MySql.Data, Version=5.2.2.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d"/>
     <!-- Sql Server 2000 config -->
     <add key="SqlServer.AutoCreateTable" value="true"/>
-    <add key="SqlServer.DataBase" value="@SqlServer2000 : data source=LLF-PC\SQLEXPRESS;initial catalog=llf_sql_test;user id=sa;password=123" />
+    <add key="SqlServer.DataBase" value="@SqlServer2000 : data source=LLF-PC\SQLEXPRESS;initial catalog=llf_sql_test;user id=sa;password=123"/>
     <!-- Oracle 2000 config -->
     <add key="Oracle.AutoCreateTable" value="true"/>
-    <add key="Oracle.DataBase" value="@Oracle : Data Source=localhost; User Id=llf; Password=123" />
-    <add key="Oracle.DbProviderFactory" value="@SmartDbFactory : System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+    <add key="Oracle.DataBase" value="@Oracle : Data Source=localhost; User Id=llf; Password=123"/>
+    <add key="Oracle.DbProviderFactory" value="@SmartDbFactory : System.Data.OracleClient, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"/>
   </Lephone.Settings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
