--- a/src/SqlRecorder/App.config
+++ b/src/SqlRecorder/App.config
@@ -1,30 +1,30 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0"?>
 <configuration>
   <configSections>
-    <section name="Lephone.Settings" type="Lephone.Util.Setting.NameValueSectionHandler, Lephone.Util" />
+    <section name="Lephone.Settings" type="Lephone.Util.Setting.NameValueSectionHandler, Lephone.Util"/>
   </configSections>
 
   <Lephone.Settings>
-    <add key="Orm.UsingParameter" value="false" />
+    <add key="Orm.UsingParameter" value="false"/>
 
-    <add key="DataBase" value="@Access : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql" />
-    <add key="DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data" />
-    <add key="DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql" />
+    <add key="DataBase" value="@Access : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql"/>
+    <add key="DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data"/>
+    <add key="DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql"/>
 
-    <add key="1.DataBase" value="@SqlServer2000 : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql" />
-    <add key="1.DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data" />
-    <add key="1.DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql" />
+    <add key="1.DataBase" value="@SqlServer2000 : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql"/>
+    <add key="1.DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data"/>
+    <add key="1.DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql"/>
 
-    <add key="2.DataBase" value="@MySql : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql" />
-    <add key="2.DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data" />
-    <add key="2.DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql" />
+    <add key="2.DataBase" value="@MySql : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql"/>
+    <add key="2.DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data"/>
+    <add key="2.DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql"/>
 
-    <add key="3.DataBase" value="@SQLite : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql" />
-    <add key="3.DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data" />
-    <add key="3.DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql" />
+    <add key="3.DataBase" value="@SQLite : Lephone.MockSql.Recorder.ConsoleRecorder, Lephone.MockSql"/>
+    <add key="3.DbDriver" value="Lephone.Data.Driver.CommonDbDriver, Lephone.Data"/>
+    <add key="3.DbProviderFactory" value="Lephone.MockSql.RecorderFactory, Lephone.MockSql"/>
   </Lephone.Settings>
 
   <appSettings>
-    <add key="RecorderFileName" value="c:\1.sql" />
+    <add key="RecorderFileName" value="c:\1.sql"/>
   </appSettings>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
