--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -162,6 +162,7 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Definition\DbObjectModelBase.cs" />
     <Compile Include="Definition\DbObjectSmartUpdate.cs" />
     <Compile Include="Definition\DeleteToAttribute.cs" />
+    <Compile Include="Definition\DescriptionAttribute.cs" />
     <Compile Include="Definition\HasAndBelongsToMany.cs" />
     <Compile Include="Definition\HasAndBelongsToManyAttribute.cs" />
     <Compile Include="Definition\HasManyAttribute.cs" />
