NOT WORKING, DON'T DOWNLOAD THIS IF YOU WANT A WORKING COPY
git-svn-id: https://dbentry.svn.codeplex.com/svn@66934 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/Lephone.CodeGen/Lephone.CodeGen.csproj
+++ b/src/Lephone.CodeGen/Lephone.CodeGen.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Processor\AssemblyProcessor.cs" />
     <Compile Include="Helper.cs" />
     <Compile Include="Processor\IlBuilder.cs" />
+    <Compile Include="Processor\KnownTypesHandler.cs" />
     <Compile Include="Processor\ModelProcessor.cs" />
     <Compile Include="ModelsGenerator.cs" />
     <Compile Include="Program.cs" />
