--- a/src/Lephone.CodeGen/Lephone.CodeGen.csproj
+++ b/src/Lephone.CodeGen/Lephone.CodeGen.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Processor\KnownTypesHandler.cs" />
     <Compile Include="Processor\ModelProcessor.cs" />
     <Compile Include="ModelsGenerator.cs" />
+    <Compile Include="Processor\PropertyInformation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MvcActionGenerator.cs" />
@@ -138,7 +139,8 @@
 goto End
 
 :Release
-copy *.exe ..\..\..\..\bin\
+copy Lephone.CodeGen.exe ..\..\..\..\bin\
+copy Lephone.CodeGen.exe.config ..\..\..\..\bin\
 
 :End
 </PostBuildEvent>
