NOT WORKING, DON'T DOWNLOAD THIS IF YOU WANT A WORKING COPY
git-svn-id: https://dbentry.svn.codeplex.com/svn@67341 81e6e737-5a20-4d0f-a97c-cb01297b46e0

--- a/src/Lephone.Data/Lephone.Data.csproj
+++ b/src/Lephone.Data/Lephone.Data.csproj
@@ -128,10 +128,10 @@ copy *.dll ..\..\..\..\bin\
     <Compile Include="Common\DynamicQuery.cs" />
     <Compile Include="Common\DynamicRow.cs" />
     <Compile Include="Common\DynamicTable.cs" />
-    <Compile Include="Common\ForTypeAttribute.cs" />
     <Compile Include="Common\GroupBySumObject.cs" />
     <Compile Include="Common\AssemblyHandler.cs" />
     <Compile Include="Common\LephoneSetting.cs" />
+    <Compile Include="Common\ModelHandlerAttribute.cs" />
     <Compile Include="Common\ModelUpdater.cs" />
     <Compile Include="Common\ObjectInfo_ctor.cs" />
     <Compile Include="Common\TimeSpanLessDataReader.cs" />
