--- a/src/Lephone.CodeGen/Lephone.CodeGen.csproj
+++ b/src/Lephone.CodeGen/Lephone.CodeGen.csproj
@@ -80,6 +80,8 @@
     <Compile Include="Processor\IlBuilder.cs" />
     <Compile Include="Processor\KnownTypesHandler.cs" />
     <Compile Include="Processor\ModelHandlerGenerator.cs" />
+    <Compile Include="Processor\ModelInformation.cs" />
+    <Compile Include="Processor\ModelMember.cs" />
     <Compile Include="Processor\ModelProcessor.cs" />
     <Compile Include="ModelsGenerator.cs" />
     <Compile Include="Processor\PropertyInformation.cs" />
